:lipstick: Ensure images don't overflow

--- a/src/langerak_gkv/sass/components/_page-content.scss
+++ b/src/langerak_gkv/sass/components/_page-content.scss
@@ -22,3 +22,7 @@ $border-height: 500px;
     background: $theme-green-yellow;
   }
 }
+
+.page-content img {
+  max-width: 100%;
+}
